# fit-track-tg-bot

./: .env.example  .gitignore  README.md  alembic.ini  docker-compose-local.yaml  justfile  pyproject.toml  requirements.txt
bot/: config.py  enums.py  filters.py  logger.py  main.py  regexps.py  utils.py
bot/core/: food_allocation_calculator.py  logger.py  nutrition_calculator.py
bot/core/enums/: __init__.py  activity_rate.py  weight_target.py
bot/db/: core.py  model_types.py
bot/db/migrations/: env.py
bot/db/migrations/versions/: 1726585032_b4f9746b888d_create_users_table.py  1726844636_d9952022112d_add_username_to_users.py  1729085793_3589074a9b3b_add_event_count_to_users.py
bot/db/models/: base.py  user.py
bot/db/queries/: __init__.py  user.py
bot/enums/: __init__.py  biological_gender.py
bot/errors/: __init__.py  user.py
bot/handlers/: __init__.py  actions.py  commands.py
bot/handlers/surveys/: __init__.py  adjust_calories.py  calc_calories.py  calc_cpfc.py  calc_food_allocation.py  calc_pfc.py  leave_feedback.py
bot/keyboards/: activity_rate.py  biological_gender.py  gender.py  root.py  weight_target.py
bot/keyboards/inline/: fat_pct.py
bot/keyboards/reply/: root.py  survey.py
bot/middlewares/: auth.py  usage_stats.py
bot/survey/: context.py  middleware.py  middlewares.py  routers.py
bot/utils/: ai_utils.py  aiogram_utils.py  format_utils.py  google_utils.py  message_utils.py  parse_utils.py  string_utils.py  survey_utils.py
tests/: test_logger.py
tests/core/enums/: test_biological_gender_enum.py
tests/enums/: test_biological_gender_enum.py
(+20 files in other folders)
