[tool.poetry]
package-mode = false

[tool.poetry.dependencies]
python = "3.12.2"
aiogram = "^3.13.0"
pydantic-settings = "^2.5.2"
asyncpg = "^0.29.0"
sqlalchemy = { extras = ["asyncio"], version = "^2.0.35" }
alembic = "^1.13.2"
inflect = "^7.4.0"

[tool.poetry.group.dev.dependencies]
ruff = "^0.6.4"
pre-commit = "^3.8.0"

[tool.ruff]
target-version = "py312"
line-length = 120

[tool.ruff.lint]
select = ["ALL"]
ignore = [
  "COM812",
  "D1",
  "D203",
  "D213",
  "ERA",
  "FIX",
  "INP",
  "ISC001",
  "RUF001",
  "TD002",
  "TD003",
]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]
