[tool.poetry]
package-mode = false

[tool.poetry.dependencies]
python = "3.12.2"
aiogram = "^3.13.0"
pydantic-settings = "^2.5.2"
asyncpg = "^0.29.0"
sqlalchemy = { extras = ["asyncio"], version = "^2.0.35" }
alembic = "^1.13.2"
inflect = "^7.4.0"
pytest = "^8.3.3"
colorlog = "^6.8.2"
openai = "^1.47.1"
sentry-sdk = "^2.14.0"

[tool.poetry.group.dev.dependencies]
ruff = "^0.6.4"
pre-commit = "^3.8.0"
ipdb = "^0.13.13"

[tool.ruff]
target-version = "py312"
line-length = 120

[tool.ruff.lint]
select = ["ALL"]
ignore = [
  "COM812",
  "D1",
  "D203",
  "D213",
  "ERA",
  "FIX",
  "INP",
  "ISC001",
  "PLR0913",
  "PLR2004",
  "PYI041",
  "RUF001",
  "S101",
  "TD002",
  "TD003",
]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]
"tests/**.py" = []

[tool.ruff.lint.flake8-bugbear]
extend-immutable-calls = ["slice"]

[tool.pytest.ini_options]
testpaths = ["tests"]
